@startuml AvitoKitchenDatabase

title Авито.Кухня — Database Schema

hide methods
hide stereotypes

entity "restaurants" as restaurants {
    * id : BIGINT <<PK>>
    --
    * name : TEXT
    description : TEXT
    * is_active : BOOLEAN
    * created_at : TIMESTAMPTZ
    * updated_at : TIMESTAMPTZ
}

entity "menu_items" as menu_items {
    * id : BIGINT <<PK>>
    --
    * restaurant_id : BIGINT <<FK>>
    * name : TEXT
    description : TEXT
    * price : BIGINT
    * is_available : BOOLEAN
    * created_at : TIMESTAMPTZ
    * updated_at : TIMESTAMPTZ
}

entity "order_statuses" as order_statuses {
    * id : SMALLINT <<PK>>
    --
    * code : TEXT <<UQ>>
}

entity "orders" as orders {
    * id : BIGINT <<PK>>
    --
    * user_id : BIGINT
    * restaurant_id : BIGINT <<FK>>
    * status_id : SMALLINT <<FK>>
    * total_price : BIGINT
    * created_at : TIMESTAMPTZ
    * updated_at : TIMESTAMPTZ
}

entity "order_items" as order_items {
    * id : BIGINT <<PK>>
    --
    * order_id : BIGINT <<FK>>
    * menu_item_id : BIGINT <<FK>>
    * name : TEXT
    * unit_price : BIGINT
    * quantity : INTEGER
}

restaurants ||--o{ menu_items : contains
restaurants ||--o{ orders : receives

order_statuses ||--o{ orders : status

orders ||--|{ order_items : contains
menu_items ||--o{ order_items : source

note right of orders
user_id — внешний идентификатор
пользователя основной платформы Avito.

В MVP отдельная таблица users
не создаётся.
end note

note right of order_items
name и unit_price — это моментальные снимки
MenuItem на момент создания заказа.

История заказов не зависит от
последующих изменений в меню.
end note

@enduml